examples/wgsl/tests/data/missing_semicolon.diag
error: invalid syntax, expected one of: '&', '&&', '@', '^', ':', ',', '.', '==', '!=', '>', '{', '[', '(', '<', '-', '%', '|', '||', '+', ']', ')', ';', '/', '*'
  ┌─ <input>:1:30
  │
1 │ fn a() { let x = 3; return x } 
  │                              ^

