examples/wgsl/tests/data/missing_semicolon.wgsl
fn a() { let x = 3; return x } 
